--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             <!-- Flag Area -->
             <div class="flag-area">
                 <div class="flag-box">
-                    <a href="https://giraf.in/" target="_blank">
+                    <a href="https://girafcreatives.com/in" target="_blank">
                         <div class="box">
                             <img src="./img/india.jpg" alt="flag">
                             <div class="box-content">
@@ -51,7 +51,7 @@
                 </div>
 
                 <div class="flag-box">
-                    <a href="https://girafcreatives.de/" target="_blank">
+                    <a href="https://girafcreatives.com/de" target="_blank">
                         <div class="box">
                             <img src="./img/german.jpg" alt="flag">
                             <div class="box-content">
@@ -60,6 +60,18 @@
                         </div>
                     </a>
                     <h5 class="country"> Germany </h5>
+                </div>
+
+                <div class="flag-box">
+                    <a href="https://girafcreatives.com/uk" target="_blank">
+                        <div class="box">
+                            <img src="./img/united-kingdom.jpg" alt="flag">
+                            <div class="box-content">
+                            </div>
+
+                        </div>
+                    </a>
+                    <h5 class="country"> United Kingdom </h5>
                 </div>
 
 
